# programing-Stoienko-cpp

lab-cpp-01/: README.md
lab-cpp-01/doc/: lab17.md
lab-cpp-01/src/: entity.cpp  entity.h  list.cpp  list.h  main.cpp
lab-cpp-01/test/: test.cpp
lab-cpp-02/: input.txt  output.txt
lab-cpp-02/doc/: lab18.md
lab-cpp-02/src/: entity.cpp  entity.h  list.cpp  list.h  main.cpp
lab-cpp-02/test/: test.cpp
lab-cpp-02/test/lab18/: entity.cpp.txt  entity.h.txt  input.txt  list.cpp.txt  list.h.txt  main.cpp.txt  output.txt
lab-cpp-03/: CMakeLists.txt  Makefile  input.txt  output.txt
lab-cpp-03/doc/: lab19.md
lab-cpp-03/src/: entity.cpp  entity.h  list.cpp  list.h  main.cpp
lab-cpp-03/test/: test.cpp
lab-cpp-05/: Makefile  a.out
lab-cpp-05/doc/: lab21.md
lab-cpp-05/src/: list.hpp  main.cpp
lab-cpp-05/test/: test.cpp
lab-cpp-06/: Makefile  input.txt  output.txt
lab-cpp-06/doc/: lab22.md
lab-cpp-06/src/: entity.cpp  entity.h  list.cpp  list.h  main.cpp
lab-cpp-06/test/: test.cpp
